
icon:plus[] Core: The Jackson libraries have been updated to version `2.13.2`.

icon:plus[] Core: The Netty libraries have been updated to version `4.1.72.Final`.

icon:check[] Security: The 'spring-security', 'jsoup', 'commons-io', 'guava', 'jackson-databind'  libraries have been updated.

[[v1.7.22]]
== 1.7.22 (1.12.2021)

icon:check[] OrientDB: The included OrientDB version has been downgraded to version `3.1.11`.

CAUTION: OrientDB version `3.1.15`, which was included in Mesh 1.7.21 has some serious bugs, therefore, Mesh 1.7.21 has been unreleased and the OrientDB Version
has been changed back to `3.1.11`.

icon:check[] Search: When the ElasticSearch instance is not available, getting version information from the endpoint `/api/v1` failed with an internal
server error. This has been fixed, calling the endpoint `/api/v1` will not fail anymore, but will not contain the ElasticSearch version.

icon:check[] Rest: When a project with name "project" was deleted, calls to the endpoint `/projects` would cause 404 errors, until the Mesh instance was restarted.
This has been fixed now.

icon:check[] Java Rest Client: If requests to mesh fail with I/O errors (including timeouts), the thrown exception will now also contain the request method and URL.

icon:check[] Server: Liveness-Check script `live.sh` will now fail if the `mesh.live` file has not been changed since 20s (previously 60s)

icon:plus[] Docker-Image: The base image has been changed from JRE to JDK to include more tools for analyzing (e.g. creating heap-dumps). The base image has been updated to a newer JDK minor version (`11.0.12`)

[[v1.7.21]]
== 1.7.21 (11.11.2021 - Unreleased)

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.1.15`.

icon:check[] Cluster: When doing a rolling update in a cluster, a OConcurrentModificationException could occur during the startup, which could cause
subsequent errors. This has been fixed.
